--- a/index.html
+++ b/index.html
@@ -9,37 +9,12 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>6 Seconds Challenge</title>
   <script src="Cesium/Cesium.js"></script>
-  <style>
-      @import url(Cesium/Widgets/widgets.css);
-
-      #cesiumContainer {
-          position: absolute;
-          top: 0;
-          left: 0;
-          height: 100%;
-          width: 100%;
-          margin: 0;
-          overflow: hidden;
-          padding: 0;
-          font-family: sans-serif;
-      }
-
-      html {
-        height: 100%;
-      }
-
-      body {
-          padding: 0;
-          margin: 0;
-          overflow: hidden;
-          height: 100%;
-      }
-  </style>
+  <link rel="stylesheet" href="Cesium/Widgets/widgets.css"/>
+  <link rel="stylesheet" href="app.css"/>
 </head>
 <body>
   <div id="cesiumContainer"></div>
-  <script>
-    var viewer = new Cesium.Viewer('cesiumContainer');
-  </script>
 </body>
 </html>
+
+<script src="app.js"></script>
