--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>6 Seconds Challenge</title>
-  <script src="Cesium/Cesium.js"></script>
+
   <link rel="stylesheet" href="Cesium/Widgets/widgets.css"/>
   <link rel="stylesheet" href="app.css"/>
 </head>
 <body>
-  <div id="cesiumContainer"></div>
+  <div id="mainContainer"></div>
 </body>
 </html>
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="Cesium/Cesium.js"></script>
+<script src="http://www.webglearth.com/v2/api.js"></script>
 <script src="app.js"></script>
