--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <title>6 Seconds Challenge</title>
+  <title>Thales GIS day 2014</title>
 
   <link rel="stylesheet" href="Cesium/Widgets/widgets.css"/>
   <link rel="stylesheet" href="app.css"/>
