investigate requesting data depending on the bounding box to get only visible features

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
   <div id="mainContainer"></div>
-  <div id="informationPanel"></div>
+  <div id="contentPanel"></div>
+  <span id="informationPanel"></span>
 </body>
 </html>
 
