use jquery mobile to catch virtual clicks

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="app.css"/>
   <link href="video-js/video-js.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
   
 </head>
 <body>
@@ -24,6 +25,7 @@
 <script src="http://www.webglearth.com/v2/api.js"></script>
 <script src="app.js"></script>
 <script src="video-js/video.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
 
   <script>
     videojs.options.flash.swf = "video-js.swf";
