--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>Thales GIS day 2014</title>
 
-  <link rel="stylesheet" href="app.css"/>
+  <link rel="stylesheet" href="style/app.css"/>
   <link href="video-js/video-js.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+  <link rel="stylesheet" href="style/jquery.mobile-1.4.4.min.css" />
   
 </head>
 <body>
@@ -21,11 +21,11 @@
 </body>
 </html>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://www.webglearth.com/v2/api.js"></script>
-<script src="app.js"></script>
+<script src="libs/jquery-2.1.1.min.js"></script>
+<script src="libs/webgleartmapi.js"></script>
+<script src="libs/app.js"></script>
 <script src="video-js/video.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
+<script src="libs/jquery.mobile-1.4.4.min.js"></script>
 
   <script>
     videojs.options.flash.swf = "video-js.swf";
