--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <script src="libs/jquery-2.1.1.min.js"></script>
 <script src="libs/webgleartmapi.js"></script>
-<script src="libs/app.js"></script>
+<script src="libs/map3d.js"></script>
 <script src="video-js/video.js"></script>
 <script src="libs/jquery.mobile-1.4.4.min.js"></script>
 
